--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>GioThras Portfolio</title>
 </head>
 <body>
+    <!--test-->
     <!--NavBar-->
     <nav class="navbar">
         <div class="container">
